cmake_minimum_required(VERSION 3.1)
project(MyGame)
unset(WITH_TESTS CACHE)
unset(DEBUG CACHE)
find_package(GTest REQUIRED)
include_directories(${GTEST_INCLUDE_DIRS})
set(CMAKE_CXX_STANDARD 11)
set(SOURCES_LIST1 "gameOn.cpp")
include_directories(Race Units World Buildings Map Test)
set(SOURCES_LIST2 "testing.cpp")
if (WITH_TEST)
    add_executable(runTests ${SOURCES_LIST2})
    target_link_libraries(runTests ${GTEST_LIBRARIES} pthread)
elseif(DEBUG)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall")
    add_executable(MyGame ${SOURCES_LIST1})
else()
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Wall")
    add_executable(MyGame ${SOURCES_LIST1})
endif()
